@@ -13,6 +13,7 @@
 - Improved: Added option for quick mode state when using scan button on overview page (#540, #648)
 - Improved: Added separate buttons for shopping mode and new task to overview start page
 - Improved: Updated plural rules for quantity units in all project languages from Transifex
+- Improved: Better indication of invalid fields on unit conversion edit page (#682)
 - Fixed: Home Assistant offline error (#670)
 - Fixed: On login pages all barcode formats were allowed, now only QR code format is recognized
 - Fixed: Deprecated Google Play developer profile link
